# Ganak

./: .gitignore  LICENSE  README.md  pyproject.toml  shared_models.py
contracts/examples/sample-events/: run-start.json  tool-call.json  tool-result.json
contracts/openapi/: control-plane.yaml
contracts/permissions/: tool_scopes.yaml
contracts/schemas/: artifact.json  event.json  repo_snapshot.json  run.json  runner_job.json  session.json  tool_call.json  tool_result.json
docs/: api.md  architecture.md  connectors.md  data-model.md  deployment-hosted.md  local-dev.md  option-c-ready.md  repo-snapshots.md  roadmap.md  sandboxing.md  streaming.md  threat-model.md  tools.md
examples/configs/: hosted-dev.yaml  hosted-prod.yaml
examples/scenarios/add_feature/: README.md
examples/scenarios/fix_test_failure/: README.md
examples/scenarios/refactor/: README.md
infra/: docker-compose.yaml
infra/cloudflare/workers/: README.md
infra/k8s/helm/: README.md
infra/modal/images/: README.md
infra/modal/schedules/: README.md
infra/terraform/: README.md
proto/: event-envelope.md  rpc.md  runner-protocol.md
scripts/: build_snapshots.py  dev_bootstrap.sh  export_events.py  run_local_eval.py  seed_demo_repo.sh
skeleton_scripts/: minimal_agent.py  minimal_agent_core.py  minimal_control_plane.py  minimal_runner.py
tests/: README.md
tests/contract/: README.md
tests/e2e/: README.md
tests/integration/: README.md
