[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ganak"
version = "0.1.0"
description = "Ganak background coding agent system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false
